# dispo-master

./: .gitignore  README.md  index.html  package-lock.json  package.json  splashscreen.html
.github/workflows/: dev-build.yaml  publish.yaml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_parsing.rs  job_row.rs  main.rs  parse_error.rs
src/app/: App.tsx  Header.tsx  Sidebar.tsx
src/app/Routes/: About.tsx  Add.tsx  ErrorPage.tsx  Pickup.tsx  Root.tsx
src/app/redux/: jobDataSlice.ts  store.ts
src/components/: ColorSchemeToggle.tsx  DropProvider.tsx  JobRowTable.tsx  ModalProvider.tsx  MultiStep.tsx  XLSDropzone.tsx
src/tauri-api/: tauriAPI.ts  types.ts
